--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <title>Ajax card</title>
 </head>
 <body>
-    <div id="container">
-        <button id="btn">Show me card</button>
-        <div id="card">
+    <div id="container" class="flex flex-col justify-center items-center gap-4 bg-blue-300 fixed inset-0">
+        <button id="btn" class=" p-3 bg-white rounded-3xl font-bold text-blue-900">Show me card</button>
+        <div id="card" class="hidden flex-col justify-center items-center p-4 bg-white rounded-2xl">
 
         </div>
     </div>
